# git-commit-stats

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: build-lint-test.yml  cd.yml  ci.yml  release.yml
src/: analyzer.rs  main.rs
