[package]
name = "git-commit-stats"
version = "0.3.0"
edition = "2021"
authors = ["Alexander Konietzko <me@alexanderkonietzko.com>"]
license = "MIT"
description = "A tool to analyze git commits"
readme = "README.md"
homepage = "https://github.com/alex289/git-commit-stats"
repository = "https://github.com/alex289/git-commit-stats"
keywords = ["cli", "git"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
git2 = { version = "0.20.0", features = [] }
regex = "1.11.1"
itertools = "0.14.0"
chrono = "0.4.40"
