[package]
name = "git-commit-stats"
version = "0.3.2"
edition = "2021"
authors = ["Alexander Konietzko <me@alexanderkonietzko.com>"]
license = "MIT"
description = "A tool to analyze git commits"
readme = "README.md"
homepage = "https://github.com/alex289/git-commit-stats"
repository = "https://github.com/alex289/git-commit-stats"
keywords = ["cli", "git"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
git2 = { version = "0.21.0", features = [] }
regex = "1.12.3"
itertools = "0.15.0"
chrono = "0.4.44"
